@startuml

title __ANDROIDASSIGNMENTSONE's Class Diagram__\n

  namespace com.example.androidassignmentsone {
    class com.example.androidassignmentsone.ChatWindow {
        {static} # ACTIVITY_NAME : String
        ~ editTextMessage : EditText
        ~ listView : ListView
        ~ messageList : ArrayList<String>
        ~ sendButton : Button
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
    }
  }
  

  namespace com.example.androidassignmentsone {
    class com.example.androidassignmentsone.ChatWindow.ChatAdapter {
        + ChatAdapter()
        + getCount()
        + getItem()
        + getView()
    }
  }
  

  namespace com.example.androidassignmentsone {
    class com.example.androidassignmentsone.ListItemsActivity {
        {static} # ACTIVITY_NAME : String
        {static} - MY_CAMERA_PERMISSION_CODE : int
        {static} - MY_CAMERA_REQUEST_CODE : int
        - imageButton : ImageButton
        + onRequestPermissionsResult()
        # onActivityResult()
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
        # print()
    }
  }
  

  namespace com.example.androidassignmentsone {
    class com.example.androidassignmentsone.LoginActivity {
        {static} # ACTIVITY_NAME : String
        ~ editTextLoginName : EditText
        ~ editTextPassword : EditText
        - sharedPreferences : SharedPreferences
        + login()
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
    }
  }
  

  namespace com.example.androidassignmentsone {
    class com.example.androidassignmentsone.MainActivity {
        {static} # ACTIVITY_NAME : String
        # onActivityResult()
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
    }
  }
  

  com.example.androidassignmentsone.ChatWindow -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignmentsone.ChatWindow +-down- com.example.androidassignmentsone.ChatWindow.ChatAdapter
  com.example.androidassignmentsone.ChatWindow.ChatAdapter -up-|> android.widget.ArrayAdapter
  com.example.androidassignmentsone.ListItemsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignmentsone.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignmentsone.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
